added apply for loan

--- a/public/style.css
+++ b/public/style.css
@@ -107,3 +107,17 @@ a{
         align-items: center;
     }
 }
+
+/* --------------------------------------------------------- */
+
+/* 
+  
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background: var(--blue);
+  } */
+
+  
