--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,4 +7,4 @@
   :root {
     --light-blue: #a6b0ff;
     --blue: #6775eb;
-  } */
+  }
