--- a/src/components/login/style.module.css
+++ b/src/components/login/style.module.css
@@ -1,4 +1,6 @@
 body {
+  font-family: lato;
+  font-weight: 300;
   background-color: #082f58;
   background-image: url("https://www.transparenttextures.com/patterns/random-grey-variations.png");
   color: whitesmoke;
