--- a/src/css/applicationForm.css
+++ b/src/css/applicationForm.css
@@ -1,9 +1,12 @@
 body {
+  font-family: lato;
+  font-weight: 300;
   background-color: #082f58;
   background-image: url("https://www.transparenttextures.com/patterns/random-grey-variations.png");
   color: whitesmoke;
 }
 .header {
+  font-family: lato;
   display: flex;
   justify-content: space-evenly;
   margin: auto;
@@ -28,6 +31,7 @@ a {
 }
 
 .c1 {
+  font-family: lato;
   display: flex;
   align-items: center;
   width: 90%;
@@ -53,7 +57,7 @@ a {
   margin: auto;
   margin-top: 20px;
   height: fit-content;
-  width:150%;
+  width: 150%;
   background-color: white;
   background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
   border-radius: 10px 10px 10px 10px;
