--- a/src/components/admin/userinfo.module.css
+++ b/src/components/admin/userinfo.module.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 body {
   background-image: url("https://www.transparenttextures.com/patterns/random-grey-variations.png");
   /* background-color: #082f58; */
