--- a/src/components/login/style.module.css
+++ b/src/components/login/style.module.css
@@ -38,7 +38,7 @@ a {
   display: flex;
   align-items: center;
   width: 90%;
-  justify-content: space-between;
+  justify-content: start;
   color: white;
 }
 .cont {
