--- a/src/components/admin/userinfo.module.css
+++ b/src/components/admin/userinfo.module.css
@@ -43,11 +43,12 @@ body{
   margin-right: 15px;
   background-color: #03bb4083;
   font-weight: bold;
+  font-size: 30px;
   color: white;
   cursor: pointer;
 }
 .mainbtn1{
-  margin: auto;
+  margin-left: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,6 +66,6 @@ body{
 .button{
   margin: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 
 }
